force-app/main/default/objects/geopointe__GP_Daily_Report_Summary__c/geopointe__GP_Daily_Report_Summary__c.object-meta.xml
<CustomObject>
    <label>Geopointe Daily Summary</label>
    <nameField>
        <displayFormat>DCIS-{00000000}</displayFormat>
        <label>Daily Check In Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Daily Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>