force-app/main/default/objects/geopointe__GP_Daily_Report_Summary__c/fields/geopointe__Check_In_Count__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Check_In_Count__c</fullName>
    <label># of Check Ins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>