force-app/main/default/objects/geopointe__GP_Daily_Report_Summary__c/fields/geopointe__Total_Expected_Travel_Distance_mi__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Total_Expected_Travel_Distance_mi__c</fullName>
    <label>Total Expected Travel Distance (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>