force-app/main/default/objects/geopointe__GP_Daily_Report_Summary__c/fields/geopointe__Total_Time_min__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Total_Time_min__c</fullName>
    <inlineHelpText>The time in minutes from first summarized Check In to last Check Out.</inlineHelpText>
    <label>Total Time (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>