force-app/main/default/objects/geopointe__GP_Daily_Report_Summary__c/fields/geopointe__Total_Time_On_Site__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Total_Time_On_Site__c</fullName>
    <inlineHelpText>The time in minutes from first summarized Check In to last Check Out, minus total time spent between Check In stops.</inlineHelpText>
    <label>Total Time On Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>