force-app/main/default/objects/geopointe__GP_Daily_Report_Summary__c/fields/geopointe__Total_Travel_Distance_Mi__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Total_Travel_Distance_Mi__c</fullName>
    <label>Total Travel Distance (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>