force-app/main/default/objects/geopointe__GP_Daily_Report_Summary__c/fields/geopointe__User__c.field-meta.xml
<CustomField>
    <fullName>geopointe__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GP_Daily_Report_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>